--- a/index.html
+++ b/index.html
@@ -9,5 +9,87 @@
 </head>
 <body>
 
+    <nav class="site-nav grid"> 
+        <h1>Cosmo Junkie</h1>
+        <ul>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#skills"></a>Skills</li>
+            <li><a href="#contact"></a>Contact</li>
+        </ul>
+    </nav>
+    
+    <section id="welcome" class="grid">
+        <div class="welcome-text">
+            <h2>Space Enthusiast <br />& JavaScript Developer</h2>
+            <p class="leading">I am a Front-End Developer and I love working with new technologies.</p>
+            <a href="#portfolio" class="button">View my Work</a>
+        </div>
+        <div class="welcome-img">
+            <img src="assets/banner_image.png" alt="Planet of Pic">
+        </div>
+    </section>
+
+    <section id="portfolio">
+        <h3>Some of my Projects</h3>
+        <div class="projects grid">
+            <a href="#">
+                <img src="assets/project_1.png" alt="space race image">
+                <h4>Space Race Game</h4>
+            </a>
+            <a href="#">
+                <img src="assets/project_2.png" alt="planet boy image">
+                <h4>Planet Boy API</h4>
+            </a>
+            <a href="#">
+                <img src="assets/project_3.png" alt="captain cosmo image">
+                <h4>Captain Cosmo Blog</h4>
+            </a>
+        </div>
+    </section>
+
+    <section id="skills">
+        <h3>Things I Can Do</h3>
+        <ul class="grid">
+            <li>
+                <img src="assets/comet_1.svg" alt="">
+                <h4>JavaScript</h4>
+            </li>
+            <li>
+                <img src="assets/comet_2.svg" alt="">
+                <h4>React</h4>
+            </li>
+            <li>
+                <img src="assets/comet_3.svg" alt="">
+                <h4>NodeJS</h4>
+            </li>
+            <li>
+                <img src="assets/comet_4.svg" alt="">
+                <h4>MongoDB</h4>
+            </li>
+        </ul>
+        <p class="leading">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt, eos! Molestiae ipsum iste quae? Natus ipsum eligendi quidem culpa ducimus?</p>
+    </section>
+
+    <section id="contact">
+        <h3>Get In Touch</h3>
+        <p class="leading">Plan a 5 minute meeting anyday you're free!</p>
+        <form action="mailto:deveshb583@gmail.com">
+            <input type="text" placeholder="Enter your Name...">
+            <input type="email" placeholder="Enter your Email...">
+            <textarea placeholder="YOUR MESSAGE..."></textarea>
+            <button class="button">Send Flare</button>
+        </form>
+    </section>
+
+    <footer>
+        <div class="grid">
+            <p class="copyright">Copyright &copy; <script>document.write(new Date().getFullYear())</script> DeveshRB</p>
+            <ul class="social">
+                <li><a href="#"><img src="assets/icon_fb.svg" alt="facebook"></a></li>
+                <li><a href="https://twitter.com/Deveshb15"><img src="assets/icon_tw.svg" alt="twitter"></a></li>
+            </ul>
+        </div>
+    </footer>
+    
 </body>
 </html>
