--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </li>
             <li>
                 <img src="assets/comet_2.svg" alt="">
-                <h4>React</h4>
+                <h4>ReactJS</h4>
             </li>
             <li>
                 <img src="assets/comet_3.svg" alt="">
